2019-05-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/formation.cpp:
	* rcsc/formation/formation.h:
	* rcsc/formation/formation_dt.cpp:
	* rcsc/formation/formation_static.cpp:
	- フォーマット変換ツールのためにメソッド名を修正

2019-05-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/formation.cpp:
	* rcsc/formation/formation.h:
	* rcsc/formation/formation_dt.cpp:
	* rcsc/formation/formation_dt.h:
	* rcsc/formation/formation_static.cpp:
	* rcsc/formation/formation_static.h:
	* rcsc/formation/sample_data.cpp:
	* rcsc/formation/sample_data.h:
	- フォーメーションファイルのフォーマットをCSV形式に変更．旧版を読
	み書きする関数は別名で残す．

2019-05-08  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/Makefile.am:
	* rcsc/formation/formation.cpp:
	- DTとStatic以外のフォーメーションモデルをビルド対象から除外．

2019-05-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/action_effector.cpp:
	- フォウルを受けた場合のコマンドロストに対してデバッグメッセージを
	出力しないように変更．確認のために，キックのみファウルによ
	るコマンドロスト情報を出力する．

2018-11-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- fullstate使用時に敵チーム情報が更新されていなかった不具合を修正

2018-06-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/coach_agent.cpp:
	* rcsc/coach/coach_config.cpp:
	* rcsc/coach/coach_config.h:
	* rcsc/common/audio_codec.cpp:
	* rcsc/common/audio_codec.h:
	* rcsc/player/player_agent.cpp:
	* rcsc/player/player_config.cpp:
	* rcsc/player/player_config.h:
	- AudioCodecに暗号化用シフトパラメータを追加

2018-04-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/common/abstract_client.cpp:
	- zlib未インストール環境でのビルド不具合を修正

2017-12-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_smart_kick.cpp:
	- ボールの目標初速の範囲チェックを追加

2017-10-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/player_type_analyzer.cpp:
	- ヘテロ分析のバグ修正

2017-07-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/clang/clang_unum.h:
	- ワイルドカードを表す定数としてCLangUnumSet::Allを追加

2017-07-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>
